--- a/_config.yml
+++ b/_config.yml
@@ -3,17 +3,17 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: CheatSheets.zip
+title: code-reference.dev
 subtitle: "Ultimate Cheat for Developers"
 description: "Share quick reference and cheat sheet for developers"
 keywords: cheat,sheet,cheatsheets,reference,programming,code table,snippets,linux,command,shortcuts,developers
-author: CheatSheets.zip
+author: code-reference.dev
 language: en
 timezone: ""
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: https://cheatsheets.zip
+url: https://code-reference.dev
 root: /
 permalink: :name.html
 permalink_defaults:
